--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
+@font-face {
+    font-family: "Japanese 3017";
+    src: url("./fonts/Japanese3017.ttf") format("truetype");
+}
+
 body {
-  background: var(--tg-theme-secondary-bg-color, white);
-  padding: 0;
-  margin: 0;
+    font-family: "Japanese 3017", sans-serif;
+    background: #22001B;
+    padding: 0;
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
