--- a/src/pages/FruitClickerPage/EnergyBlock/EnergyBlock.css
+++ b/src/pages/FruitClickerPage/EnergyBlock/EnergyBlock.css
@@ -34,10 +34,12 @@
     position: absolute;
     top: 10px;
     right: 55px;
+    transition: all 0.5s ease-in-out;
 }
 
 .energy-level__bar {
     height: 100%;
     border-radius: 0 38px 38px 0;
     background: linear-gradient(90deg, #FF6E05 0%, #F83C27 100%);
+    transition: all 0.5s ease-in-out;
 }
