--- a/src/pages/FruitClickerPage/FruitClicker/FruitClicker.css
+++ b/src/pages/FruitClickerPage/FruitClicker/FruitClicker.css
@@ -1,3 +1,15 @@
+@keyframes clickAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .clicker {
     position: relative;
     margin-top: 55px;
@@ -21,6 +33,9 @@
     border-radius: 38%;
 }
 
+.clicker-strawberry.clicked {
+    animation: clickAnimation 0.2s ease;
+}
 
 .clicker-tap-count {
     position: absolute;
